buildRest in contact-rest module
